fix overflow footer on mobile view

--- a/style.sm.css
+++ b/style.sm.css
@@ -42,6 +42,7 @@
   }
 
   footer .container .data {
+    width: 100%;
     flex-direction: column;
     gap: 12px;
   }
